// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Icon > should render the Icon component 1`] = `
<svg
  class="dusk-icon dusk-icon--size--default"
  role="graphics-symbol"
  viewBox="0 0 24 24"
>
  <path
    d="M3,3H21V21H3V3M5,5V19H19V5H5Z"
  />
  <!---->
</svg>
`;

exports[`Icon > should render the icon inside a \`g\` element when the \`as\` prop is "g" 1`] = `
<g
  class="dusk-icon dusk-icon--size--default"
>
  <rect
    class="dusk-icon__bounding-box"
  />
  <path
    d="M3,3H21V21H3V3M5,5V19H19V5H5Z"
  />
  <!---->
</g>
`;
